[package]
name = "summit"
version = "0.1.0"
edition = "2021"
description = "Placeholder"
license = "MIT"
authors = ["Shaun Culver <shaun@culver.ch>"]
repository = "https://github.com/shaun-culver/summit"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = "2.0.4"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }